--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -3,9 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email-Subscribe</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Document</title>
 </head>
 <body>
-  
+  <!-- background container -->
+  <div class="flex items-center justify-center h-screen bg-zinc-700">
+    <div class="bg-zinc-800 p-2 mx-6 rounded-2xl">
+
+      <!-- flex container -->
+      <div class="flex flex-col md:flex-row rounded-l-xl">
+
+        <!-- image -->
+        <img class="object-fit rounded-xl h-80 md:h-64 md:rounded-l-xl md:rounded-r-none transform hover:scale-105 transition duration-500 ease-in-out" 
+          src="images/image.jpg" alt="">
+
+        <!-- contents -->
+        <div class="p-6 md:p-12">
+          <h2 class="font-serif text-xl font-medium text-center text-white md:text-left">
+            Get diet and fitness tips in your inbox
+          </h2>
+          <p class="max-w-xs my-4 text-xs leading-5 tracking-wide text-center text-white md:text-left">
+            Eat better and exercise smarter. Sign up for the Food & Fitness newsletter.
+          </p>
+          <div class="flex flex-col mt-5 space-y-4 md:space-x-3 md:flex-row md:space-y-0">
+            <input class="p-2 px-4 text-center text-white bg-zinc-800 border border-zinc-600 placeholder:text-xs placeholder:text-center md:text-left md:placeholder-left focus:outline-none"
+            type="text" placeholder="Enter your email address">
+
+            <button class="px-5 py-3 text-xs rounded-md text-zinc-800 bg-lime-500 hover:bg-zinc-700 hover:text-white duration-500 md:hover:bg-zinc-700">
+              Subscribe
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </body>
 </html>
