--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Document</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>Email Subscribe</title>
 </head>
 <body>
   <!-- background container -->
